--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Onyoo's Github Page</title>
+</head>
+<body>
+	Hello World
+	<br>
+	<img src="images/octocat.png" alt="onyoo's octocat, holding a ruby staff and a wizard's hat">
+</body>
+</html>
