--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 	Hello World
 	<br>
-	<img src="images/octocat.png" alt="onyoo's octocat, holding a ruby staff and a wizard's hat">
+	<img src="images/octocat.png" alt="Onyoo's octocat, holding a ruby staff and a wizard's hat. Created at https://myoctocat.com/build-your-octocat/" style="width:20%;height:20%">
 </body>
 </html>
