--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+  <meta charset="UTF-8">
 	<title>Onyoo's Github Page</title>
+  <link rel="title icon" href="assets/images/octocat_cropped.png" type="image/png">
+  <link rel="stylesheet" type="text/css" href="base.css">
+
+	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 </head>
 <body>
-	Hello World
+
+	<h1>Hello World</h1>
 	<br>
-	<img src="images/octocat.png" alt="Onyoo's octocat, holding a ruby staff and a wizard's hat. Created at https://myoctocat.com/build-your-octocat/" style="width:20%;height:20%">
+	<img src="assets/images/octocat.png" alt="Onyoo's octocat, holding a ruby staff and a wizard's hat. Created at https://myoctocat.com/build-your-octocat/" style="width:20%;height:20%">
 </body>
 </html>
