--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<h1>Hello World</h1>
+	<h1>Hello World!</h1>
 	<br>
 	<img src="assets/images/octocat.png" alt="Onyoo's octocat, holding a ruby staff and a wizard's hat. Created at https://myoctocat.com/build-your-octocat/" style="width:20%;height:20%">
 </body>
