--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
 	<title>Onyoo's Github Page</title>
   <link rel="title icon" href="assets/images/octocat_cropped.png" type="image/png">
   <link rel="stylesheet" type="text/css" href="base.css">
-
-	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 </head>
 <body>
 
 	<h1>Hello World!</h1>
+  <div class="explore-link project" id="react-game">Tick-Tack-Toe</div>
+  <div id="hello-example">kd</div>
 	<br>
 	<img src="assets/images/octocat.png" alt="Onyoo's octocat, holding a ruby staff and a wizard's hat. Created at https://myoctocat.com/build-your-octocat/" style="width:20%;height:20%">
+
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src="assets/js/documentation.js"></script>
+  <script src="documentation.js"></script>
+
+
 </body>
 </html>
