trying to compile jsx

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 	<br>
 	<img src="assets/images/octocat.png" alt="Onyoo's octocat, holding a ruby staff and a wizard's hat. Created at https://myoctocat.com/build-your-octocat/" style="width:20%;height:20%">
 
+  <script type="text/jsx" src="./assets/js/documentation.js"></script>
+  <script type="text/babel" src="./assets/js/documentation.js"></script>
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-  <script src="assets/js/documentation.js"></script>
-  <script src="documentation.js"></script>
+  <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
 
 
 </body>
