--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<br>
 	<img src="assets/images/octocat.png" alt="Onyoo's octocat, holding a ruby staff and a wizard's hat. Created at https://myoctocat.com/build-your-octocat/" style="width:20%;height:20%">
 
-  <script type="text/jsx" src="./assets/js/documentation.jsx"></script>
+  <!-- <script type="text/jsx" src="./assets/js/documentation.jsx"></script> -->
   <script type="text/babel" src="./assets/js/documentation.jsx"></script>
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
