--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 
 	<h1>Hello World!</h1>
   <div class="explore-link project" id="react-game">Tick-Tack-Toe</div>
-  <div id="hello-example">kd</div>
+  <Game>
+  <div id="hello-example"></div>
 	<br>
-	<img src="assets/images/octocat.png" alt="Onyoo's octocat, holding a ruby staff and a wizard's hat. Created at https://myoctocat.com/build-your-octocat/" style="width:20%;height:20%">
+	<img src="assets/images/octocat.png"
+        alt="Onyoo's octocat, holding a ruby staff and a wizard's hat. Created
+            at https://myoctocat.com/build-your-octocat/"
+        style="width:20%;height:20%">
 
   <!-- <script type="text/jsx" src="./assets/js/documentation.jsx"></script> -->
   <script type="text/babel" src="./assets/js/documentation.jsx"></script>
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-  <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
-
+  <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js" crossorigin></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/5.0.0/react-router.js" crossorigin></script>
 
 </body>
 </html>
