--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js" crossorigin></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/5.0.0/react-router.js" crossorigin></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/5.0.0/react-router-dom.js" crossorigin></script>
 
 </body>
 </html>
